# unicheckers

./: .gitignore  README.md  stack.yaml  unicheckers.cabal  unicheckers.conf  unicheckers.lkshf
.cabal/: config
src/: AI.hs  Board.hs  Config.hs  Control.hs  Draw.hs  Field.hs  GameState.hs  Logger.hs  Main.hs  Misc.hs  State.hs
