cabal-version: 3.0
name: unicheckers
version: 0.0.9.3
build-type: Simple
license: BSD-3-Clause
description:
    Simple checkers game in Haskell

executable unicheckers
    main-is: Main.hs
    build-depends:
        QuickCheck ==2.14.2,
        ansi-terminal ==0.11,
        ncurses ==0.2.16,
        random ==1.2.0,
        base -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        AI
        State

