cabal-version: 3.0
name: unicheckers
version: 0.0.9.6
build-type: Simple
license: BSD-3-Clause
description:
    Simple checkers game in Haskell

executable unicheckers
    main-is: Main.hs
    build-depends:
        base -any,
        relude ^>=0.7.0.0,
        QuickCheck ==2.14.2,
        ansi-terminal ==0.11,
        ncurses ==0.2.16,
        random ==1.2.0,
        fast-logger ==3.0.2,
        bytestring ==0.10.12.0,
        iso8601-time ==0.1.5,
        time ==1.9.3,
        configurator ==0.3.0.0,
        text ==1.2.4.0
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        AI
        GameState
        Logger
        Config
    default-extensions:
        BangPatterns
        NoImplicitPrelude
        OverloadedStrings
    ghc-options: -Wall -Wno-unused-do-bind -threaded -rtsopts -with-rtsopts=-N -O2

